--- a/progress/64bit/custom.ini
+++ b/progress/64bit/custom.ini
@@ -17,18 +17,18 @@ ProductSupportPhone=877.316.9669
 ;----------------------------------------------------------
 ; Product information
 ;----------------------------------------------------------
-ProductName=HPCC-ODBC Connector
-ProductVersion=V0.10
+ProductName=HPCC-ODBC64 Connector
+ProductVersion=V0.50
 OEMPrefix=HS
 ProductRegKey=HSoal25.dll
-ProductType=32
+ProductType=64
 ProductURL=http://hpccsystems.com
 ProductUpdateURL=http://hpccsystems.com/download
 
 ;----------------------------------------------------------
 ;Specific Installation information
 ;----------------------------------------------------------
-FolderName=HPCC Systems\HPCC-ODBC Connector
+FolderName=HPCC Systems\HPCC-ODBC64 Connector
 AppBasePath=${Program Files}\HPCCSystems\HPCC-ODBC Connector
 ;UnInstallLocation=
 
@@ -68,14 +68,14 @@ CreateSystemDSN=1
 CreateFileDSN=0
 
 ; the following will be visible in the ODBC Admin "System DSN" tab
-ODBCDSNName=HPCC-ODBC_ConnDSN
-ODBCDSNDescription=LexisNexis HPCC Systems HPCC-ODBC Connector
-ODBCDSNService=HPCC-ODBC_ConnSvc
-ODBCDSNServiceDataSource=HPCC-ODBC_ConnDS
-ODBCIncludeHelp=1
+ODBCDSNName=HPCC-ODBC64_ConnDSN
+ODBCDSNDescription=LexisNexis HPCC Systems 64 Bit HPCC-ODBC Connector
+ODBCDSNService=HPCC-ODBC64_ConnSvc
+ODBCDSNServiceDataSource=HPCC-ODBC64_ConnDS
+ODBCIncludeHelp=0
 
 ;following [name] must match ODBCDSNName above with DSN_ prefix
-[DSN_HPCC-ODBC_ConnDSN]
+[DSN_HPCC-ODBC64_ConnDSN]
 
 ;----------------------------------------------------------
 ; Custom File information
@@ -108,8 +108,8 @@ ODBC Administrator=ODBC Administrator
 ; Services information
 ;----------------------------------------------------------
 [Services]
-HPCC-ODBC_ConnSvc=OA72_OpenAccessSDKforC
+HPCC-ODBC64_ConnSvc=OA72_OpenAccessSDKforC
 
-[HPCC-ODBC_ConnSvc]
+[HPCC-ODBC64_ConnSvc]
 ShowServiceDialog=1
 ServiceDescription=[MySDK 7.2.0] Service for C with SQL Engine
