ODBC-17 Minor changes needed for 32/64 builds
There are a few changes needed to the build process to ensure the 32
and 64 bit builds don't collide with each other. Specifically the drivers
will install in folders with the architecture (32/64) as part of the path
name

Signed-off-by: William Whitehead <william.whitehead@lexisnexis.com>

--- a/progress/64bit/custom.ini
+++ b/progress/64bit/custom.ini
@@ -29,7 +29,7 @@ ProductUpdateURL=http://hpccsystems.com/download
 ;Specific Installation information
 ;----------------------------------------------------------
 FolderName=HPCC Systems\HPCC-ODBC64 Connector
-AppBasePath=${Program Files}\HPCCSystems\HPCC-ODBC Connector
+AppBasePath=${Program Files}\HPCCSystems\HPCC-ODBC64 Connector
 ;UnInstallLocation=
 
 ;----------------------------------------------------------
