--- a/progress/32bit/custom.ini
+++ b/progress/32bit/custom.ini
@@ -29,7 +29,7 @@ ProductUpdateURL=http://hpccsystems.com/download
 ;Specific Installation information
 ;----------------------------------------------------------
 FolderName=HPCC Systems\HPCC-ODBC32 Connector
-AppBasePath=${Program Files}\HPCCSystems\HPCC-ODBC Connector
+AppBasePath=${Program Files}\HPCCSystems\HPCC-ODBC32 Connector
 ;UnInstallLocation=
 
 ;----------------------------------------------------------
