Signed-off-by: William Whitehead <william.whitehead@lexisnexis.com>

--- a/progress/32bit/custom.ini
+++ b/progress/32bit/custom.ini
@@ -28,15 +28,15 @@ ProductUpdateURL=http://hpccsystems.com/download
 ;----------------------------------------------------------
 ;Specific Installation information
 ;----------------------------------------------------------
-FolderName=HPCC Systems\HPCC-ODBC32 Connector
-AppBasePath=${Program Files}\HPCCSystems\HPCC-ODBC32 Connector
+FolderName=HPCC Systems\ODBC Connector
+AppBasePath=${Program Files}\HPCCSystems\ODBC Connector
 ;UnInstallLocation=
 
 ;----------------------------------------------------------
 ;ODBC driver information
 ;----------------------------------------------------------
 ODBCDriverDLLName=HSoal25.dll
-ODBCDriverName=HPCC-ODBC Connector
+ODBCDriverName=HPCC-ODBC32 Connector
 ODBCSetupDLLName=HSoals25.dll
 ODBCDialogDLLName=HSoald25.dll
 ODBCMessageDLLName=ivoal25m.dll
